--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,25 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
-
+   sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  flutter_launcher_icons: ^0.8.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/nami1.PNG"
+
+  adaptive_icon_background: "#fffff"
+  adaptive_icon_foreground: "assets/images/nami1.PNG"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,8 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -60,10 +69,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Billabong
+      fonts:
+        - asset: assets/fonts/Billabong.ttf
+    - family: NotoSansJP-Bold
+      fonts:
+            - asset: assets/fonts/NotoSansJP-Bold.otf
+    - family: NotoSansJP-Medium
+      fonts:
+            - asset: assets/fonts/NotoSansJP-Medium.otf
+    - family: NotoSansJP-Regular
+      fonts:
+            - asset: assets/fonts/NotoSansJP-Regular.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
