--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-
   flutter_launcher_icons: ^0.8.0
+
+  # FireBase
+  cloud_firestore: ^0.14.4
+  firebase_storage: ^5.0.0
+
 
 dev_dependencies:
   flutter_test:
