--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   # FireBase
   cloud_firestore: ^0.14.4
   firebase_storage: ^5.0.0
-
+  firebase_auth: ^0.18.1
+  firebase_analytics: ^5.0.14
+  firebase_core: ^0.5.0
 
 dev_dependencies:
   flutter_test:
