--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_launcher_icons: ^0.8.0
+  font_awesome_flutter: ^8.8.1
 
   # FireBase
   cloud_firestore: ^0.14.4
