--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_launcher_icons: ^0.8.0
   font_awesome_flutter: ^8.8.1
+  fluttertoast: ^4.0.1
 
   # FireBase
   cloud_firestore: ^0.14.4
@@ -36,6 +37,8 @@ dependencies:
   firebase_auth: ^0.18.1
   firebase_analytics: ^5.0.14
   firebase_core: ^0.5.0
+
+  provider: ^4.1.3
 
 dev_dependencies:
   flutter_test:
