--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,5 +41,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<!-- end -->
+	<!-- image_picker section -->
+	<key>NSPhotoLibraryUsageDescription</key>
+    <string>掲示板に投稿するために写真を追加します</string>
+    <key>NSCameraUsageDescription</key>
+    <string>掲示板に投稿するためにカメラを起動します</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>投稿するのにマイクが必要になります</string>
+	<!-- end -->
 </dict>
 </plist>
