--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_launcher_icons: ^0.8.0
   font_awesome_flutter: ^8.8.1
   fluttertoast: ^4.0.1
+  image_picker: ^0.6.7+1
 
   # FireBase
   cloud_firestore: ^0.14.4
