--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   fluttertoast: ^4.0.1
   image_picker: ^0.6.7+1
+  uuid: ^2.1.0
+  cached_network_image: ^2.3.3
 
   # FireBase
   cloud_firestore: ^0.14.4
