--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_picker: ^0.6.7+1
   uuid: ^2.1.0
   cached_network_image: ^2.3.3
+  shared_preferences: ^0.5.12+4
 
   # FireBase
   cloud_firestore: ^0.14.4
