--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   expansion_tile_card: ^1.1.0
   google_maps_flutter: ^0.5.28+1
+  share: ^0.6.4+3
 
   # FireBase
   cloud_firestore: ^0.14.4
